<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingBottom="24dp">

    <TextView
        android:id="@+id/week_day_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:textAppearance="?attr/textAppearanceHeadline6"
        android:text="@string/day_label" />

    <TextView
        android:id="@+id/week_day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="4dp"
        tools:text="@string/monday" />

    <TextView
        android:id="@+id/first_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:textAppearance="?attr/textAppearanceHeadline6"
        android:text="@string/first_label" />

    <TextView
        android:id="@+id/first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="4dp"
        tools:text="@string/sample_text_short" />

    <TextView
        android:id="@+id/second_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:textAppearance="?attr/textAppearanceHeadline6"
        android:text="@string/second_label" />

    <TextView
        android:id="@+id/second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="4dp"
        tools:text="@string/sample_text_long" />

    <TextView
        android:id="@+id/dinner_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:textAppearance="?attr/textAppearanceHeadline6"
        android:text="@string/dinner_label" />

    <TextView
        android:id="@+id/dinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="4dp"
        tools:text="@string/sample_text_dinner" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/divider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="4dp"
        app:dividerColor="@color/black" />
</LinearLayout>